2014-10-26  Per Bothner  <per@bothner.com>

	* UnicodeUtils.java (foldCase): Greek sigma should fold to regular
	non-final lower-case sigma, even at the end of a word.

2014-09-21  Per Bothner  <per@bothner.com>

	* Arithmetic.java (typeNumeric): Remove field.   Instead use
	LangObjType.numericType.  This means using smarter coercions.

2014-09-17  Per Bothner  <per@bothner.com>

	* LispFormat.java: Add support for cycles and sharing when
	using ~W and similar formats.

2014-08-28  Per Bothner  <per@bothner.com>

	* CompileMisc.java (compileConvert): Check for void type.

2014-07-21  Per Bothner  <per@bothner.com>

	* CompileMisc.java (validateApplyConvert): If the conversion is
	lenient, use a LenientExpectedType for the required type of the value.
	(validateApplyCallCC, validateApplyWithExceptionHandler):
	Use new maybeSetReturnType to also check for a LenientExpectedType.

2014-07-03  Per Bothner  <per@bothner.com>

	* DivideOp.java (floorQuotient): New static field.

2014-07-02  Per Bothner  <per@bothner.com>

	* Convert.java (lenient): New boolean field.
	(cast): New static instance.
	* Curry1.java: Update accordingly.
	* NamedPart.java: Update accordingly.
	* CompileMisc.java (validateApplyConvert):  If lenient we allow
	implicit conversions if the raw types match.  Used for int<->character.

2014-06-17  Per Bothner  <per@bothner.com>

	* CompileNamedPart.java (GetNamedExp.validateApply):
	Call new CompileInvoke.validateNamedInvoke.
	This allows the latter to reuse the already-computed methods list.
	(GetNamedExp.otype, GetNamedExp.mname): New fields in helper class.

2014-05-26  Per Bothner  <per@bothner.com>

	* MakeSplice.java (copyTo): New helper method - for compiled code.

2014-05-24  Per Bothner  <per@bothner.com>

	* CompileMisc.java: No longer implement Inlineable.
	Instead change to use new Procedure.compilerXKey protocol.
	* Convert.java: Update accordingly.
	* IsEq.java: Update accordingly.
	* Not.java: Update accordingly.